--- a/eth/foundry.toml
+++ b/eth/foundry.toml
@@ -5,5 +5,7 @@ libs = ["lib", "dependencies"]
 
 [dependencies]
 forge-std = "1.9.6"
+"@openzeppelin-contracts" = "5.1.0"
+"@openzeppelin-contracts-upgradeable" = "5.1.0"
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
