ai generated code and pass compilation

--- a/eth/foundry.toml
+++ b/eth/foundry.toml
@@ -9,3 +9,11 @@ forge-std = "1.9.6"
 "@openzeppelin-contracts-upgradeable" = "5.1.0"
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+solc = "0.8.28"
+evm_version = "paris"
+
+[rpc_endpoints]
+ethereum = "${ETHEREUM_RPC_URL}"
+
+[etherscan]
+ethereum = { key = "${ETHERSCAN_API_KEY}" }
