--- a/eth/.env-example
+++ b/eth/.env-example
@@ -1,4 +1,7 @@
+PUBLIC_ADDRESS=
 PRIVATE_KEY=
-RPC_MAINNET=
-RPC_SEPOLIA=
+RPC_MAINNET=""
+RPC_SEPOLIA=""
+RPC_HOLESKY=""
+RPC_POLYGON_AMOY=""
 ETHERSCAN_MAINNET_KEY=
