complete sepolia deploy and verification

--- a/eth/config/sepolia.toml
+++ b/eth/config/sepolia.toml
@@ -6,6 +6,7 @@ create2_deployer = "0xcf0aff908dcfce4f1d89f0de95ae36ec580d57ef"
 handler_admin = "0x3fcbaf4822e7c7364e43aec8253dfc888b9235bb"
 handler_manager = "0x3fcbaf4822e7c7364e43aec8253dfc888b9235bb"
 handlers_count = "1"
+test_token = "0xeebB01feC75391FB082FFC7555dF5Fd3AB75fA8f"
 
 [bridge]
 impl = "0x5da09dcc4b4f2c723738788f92fff2455f080b6d"
