--- a/eth/.env-example
+++ b/eth/.env-example
@@ -3,5 +3,7 @@ PRIVATE_KEY=
 RPC_MAINNET=""
 RPC_SEPOLIA=""
 RPC_HOLESKY=""
+RPC_POLYGON=""
 RPC_POLYGON_AMOY=""
 ETHERSCAN_MAINNET_KEY=
+POLYGON_MAINNET_KEY=
